# docs/swagger.json
@@ -1364,11 +1364,6 @@
         },
         "/healthcheck": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Check if server is alive",
                 "tags": [
                     "health"
